--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: terraform
+          path: ${{ github.workspace }}//appservice
