--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           name: terraform
           path: ${{ github.workspace }}//appservice
 
-  deploy-dev-infra:
+  deploy-infra:
     name: Deploy Infra Dev
     runs-on: ubuntu-latest
     
